--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<html lang="zh">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="stylesheet" href="<%= BASE_URL %>cdn/element-ui/theme-chalk/index.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>css/home.css">
+  <title>vue-bpmn</title>
+</head>
+
+<body>
+  <noscript>
+    <strong>很抱歉，如果没有 JavaScript 支持，vue-bpmn 将不能正常工作。请启用浏览器的 JavaScript 然后继续。</strong>
+  </noscript>
+  <div id="app">
+    <div class="avue-home">
+      <div class="avue-home__main">
+        <img class="avue-home__loading" src="./img/loading-spin.svg" alt="loading">
+        <div class="avue-home__title">正在加载资源</div>
+        <div class="avue-home__sub-title">初次加载资源可能需要较多时间 请耐心等待</div>
+      </div>
+    </div>
+  </div>
+  <script src="<%= BASE_URL %>cdn/vue/vue.min.js" charset="utf-8"></script>
+  <script src="<%= BASE_URL %>cdn/element-ui/index.js" charset="utf-8"></script>
+  <script src="<%= BASE_URL %>cdn/vue-bpmn/index.umd.min.js" charset="utf-8"></script>
+
+</body>
+
 </html>
